# project-searcher

./: .gitignore  Makefile  README.md  pyproject.toml
project_searcher/: args.py  main.py
