[tool.poetry]
name = "project-searcher"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
progress = "^1.6"
ghah = {git = "https://github.com/NicholasSynovic/github-api-handler"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
